# nu-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  mcp.sample.json
.github/workflows/: release.yml
npm/: README.md  package.json
src/: exec.rs  main.rs  state.rs
