[package]
name = "nu-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust MCP server exposing Nushell-compatible terminal commands for coding agents"
repository = "https://github.com/graves/awful_mcp"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
rmcp = { version = "0.8.5", features = ["server", "transport-io", "schemars"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
which = "8.0.0"
glob = "0.3"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.12", features = ["json"] }
nanoid = "0.4"
